First voice commit (#4)
* First voice commit

* 2nd voice commit putranscribe

* Voice transcription working with low console output

* Remove egg

---------

Co-authored-by: UserNobody14 <7thof14217@gmail.com>
Co-authored-by: Jake Koenig <jakethekoenig@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,19 @@
 [project]
 name = "prompt-and-control"
 version = "0.1.0"
-description = "Add your description here"
+description = "Voice-controlled game using raw audio capture with transcription"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "sounddevice>=0.4.6",
+    "numpy>=1.24.0",
+    "SpeechRecognition>=3.10.0",
     "openai>=1.97.1",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = ["main", "voice"]
