--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=1.24.0",
     "SpeechRecognition>=3.10.0",
     "openai>=1.97.1",
+    "Pillow>=10.0.0",
 ]
 
 [build-system]
